--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,6 @@
 # Must include at least one filename
 
-FILENAME: E:/Subject_4_event_7_base.edf
-#FILENAME: C:/Users/Chancelor/Desktop/BoYuan/SEEG/Demo/S1_ictal.edf
+FILENAME: your file path and name
 FILENAME_COMPARE: Null # you can input the compare file later in the app
 CHANNELS:
   CHANNEL_POLICY: all # or "part"
